k8s/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phoenix-backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vdt64.duckdns.org
      secretName: duckdns-backend-tls
  rules:
    - host: vdt64.duckdns.org
      http:
        paths:
          - path: /.well-known/acme-challenge/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: cm-acme-http-solver
                port:
                  number: 8089
          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: phoenix-backend-service
                port:
                  number: 8080
